--- a/requirements.txt
+++ b/requirements.txt
@@ -14,13 +14,16 @@ click==8.2.1
 colorama==0.4.6
 Deprecated==1.2.18
 distro==1.9.0
-flake8==6.1.0
 frozenlist==1.7.0
 gunicorn==20.1.0
-h11==0.16.0
-httpcore==1.0.9
+# 
+# h11==0.16.0
+# httpcore==1.0.9
 # httpx==0.28.1
+h11==0.14.0 # установлено для совместимости
+httpcore==0.17.0 # установлено для совместимости
 httpx==0.24.1 # установлено для совместимости
+# 
 idna==3.10
 iniconfig==2.1.0
 jiter==0.10.0
@@ -49,3 +52,15 @@ urllib3==2.5.0
 wrapt==1.17.3
 yarl==1.20.1
 yookassa==2.3.3
+
+# Автоматизация рабочего процесса
+poethepoet==0.37.0 # Запуск скриптов с помощью команд
+
+# Основные инструменты линтинга
+flake8==6.1.0          # Проверка стиля и ошибок
+isort==5.13.2          # Сортировка импортов
+
+# Плагины для flake8 (опционально, но очень полезно)
+flake8-docstrings==1.7.0    # Проверка докстрингов
+flake8-comprehensions==3.14.0  # Проверка списковых включений
+flake8-bugbear==23.9.16     # Поиск распространенных ошибок
