--- a/requirements.txt
+++ b/requirements.txt
@@ -64,3 +64,4 @@ isort==5.13.2          # Сортировка импортов
 flake8-docstrings==1.7.0    # Проверка докстрингов
 flake8-comprehensions==3.14.0  # Проверка списковых включений
 flake8-bugbear==23.9.16     # Поиск распространенных ошибок
+autoflake==2.3.1 # Удаление неиспользуемых импортов
